--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,10 @@ verify_ssl = true
 
 [dev-packages]
 versioneer = "*"
+ipython = "*"
 
 [packages]
+pyyaml = "*"
 
 [requires]
 python_version = "3.5"
