--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ url = "https://nexus.meteoswiss.ch/repository/python-all/simple"
 versioneer = "*"
 ipython = "*"
 pudb = "*"
+pytest = "*"
+pytest-cov = "*"
+yapf = "*"
 
 [packages]
 pyyaml = "*"
