--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ variables:
 tests:
   stage: test
   script:
-    - pip install pytest
+    - pip install pytest pytest-cov
     - pytest --cov-report term-missing --cov=gitterdb
   tags:
     - app
